--- a/index.html
+++ b/index.html
@@ -3,30 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <style>
-        /* Basic CSS to get started */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        nav {
-            margin-bottom: 20px;
-        }
-        nav a {
-            margin-right: 10px;
-        }
-        .game-container {
-            border: 1px solid #ccc;
-            padding: 20px;
-            margin: 20px 0;
-        }
-    </style>
+    <title>My Awesome Website</title>
+    <link rel="stylesheet" href="retro-style.css">
 </head>
 <body>
     <div class="container">
@@ -39,13 +17,19 @@
 
         <!-- Main content -->
         <main>
-            <h1>Welcome to My Website</h1>
-            <p>This is where you can add your main content.</p>
+            <h1>Welcome to My Website!!!</h1>
+            <div class="marquee">*** WELCOME TO MY CORNER OF THE WEB ***</div>
+            
+            <div class="under-construction">
+                🚧 UNDER CONSTRUCTION 🚧
+            </div>
+
+            <p>This is my awesome website. Make yourself at home!</p>
 
             <!-- Example game container -->
             <div class="game-container">
                 <h2>Featured Game</h2>
-                <!-- You can embed games here using iframes or HTML5 canvas -->
+                <p>Coming soon!</p>
             </div>
         </main>
     </div>
