--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Website</title>
+    <title>Nino's webhome</title>
     <link rel="stylesheet" href="style/default-style.css">
 </head>
 <body>
@@ -17,19 +17,19 @@
 
         <!-- Main content -->
         <main>
-            <h1>Welcome to My Website!!!</h1>
-            <div class="marquee">*** WELCOME TO MY CORNER OF THE WEB ***</div>
+            <h1>Nino's Webhome</h1>
+            <div class="marquee">*** NINO|ONIN ***</div>
             
             <div class="under-construction">
-                🚧 UNDER CONSTRUCTION 🚧
+                🚧 WE ARE WORKING ON THIS PART 🚧
             </div>
 
-            <p>This is my awesome website. Make yourself at home!</p>
+            <p>Placeholder text</p>
 
             <!-- Example game container -->
             <div class="game-container">
                 <h2>Featured Game</h2>
-                <p>Coming soon!</p>
+                <p>Coming attractions</p>
             </div>
         </main>
     </div>
