--- a/games.html
+++ b/games.html
@@ -57,7 +57,7 @@
         </nav>
 
         <h1>Games!!!</h1>
-        
+        <h2 href="startrek.html">Click here for Super Star Trek</h2>
         <div class="game-container">
             <h2>Hangman</h2>
             <div class="hangman-container">
