--- a/scrabble.html
+++ b/scrabble.html
@@ -1108,7 +1108,7 @@
         import { SCRABBLE_DICTIONARY } from "./js/scrabble-dict.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyAfCXBDLYYZdfLSB9FjVuMHGrAmis2CfKw",
+            apiKey: "",
             authDomain: "nino-buzz.firebaseapp.com",
             projectId: "nino-buzz",
             databaseURL: "https://nino-buzz-default-rtdb.firebaseio.com",
